--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <div class="quote">
     <p id="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space
     , or maybe people will actually read it. Who knows? All I know is that is looks nice.</p>
+
+    <p id="thor">- Thor, God of Thunder</p>
     </div>
 
     <div class="sign-up-container">
